--- a/package.json
+++ b/package.json
@@ -14,17 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "atob": "2.1.2",
     "blockies": "0.0.2",
     "bootstrap": "4.3.1",
     "browserify": "16.3.0",
-    "btoa": "1.2.1",
     "fs": "0.0.2",
     "http": "0.0.0",
     "jquery": "^3.4.1",
     "popper.js": "1.15.0",
-    "twbs-pagination": "^1.4.1",
-    "web3": "1.0.0-beta.55",
+    "twbs-pagination": "1.4.1",
+    "web3": "1.2.1",
     "zlib": "^1.0.5"
   }
 }
