--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "blockies": "0.0.2",
     "bootstrap": "4.3.1",
     "browserify": "16.3.0",
     "fs": "0.0.2",
     "http": "0.0.0",
-    "jquery": "^3.4.1",
+    "jquery": "3.4.1",
+    "jquery-ui-dist": "1.12.1",
     "popper.js": "1.15.0",
     "twbs-pagination": "1.4.1",
     "web3": "1.2.1",
-    "zlib": "^1.0.5"
+    "zlib": "1.0.5"
   }
 }
