--- a/package.json
+++ b/package.json
@@ -19,22 +19,21 @@
     "bootstrap": "4.3.1",
     "browserify": "16.3.0",
     "btoa": "1.2.1",
-    "chai": "^4.2.0",
+    "chai": "4.2.0",
     "fs": "0.0.2",
     "http": "0.0.0",
     "jquery": "3.4.1",
     "jquery-ui-dist": "1.12.1",
-    "jsdom": "^15.2.1",
-    "jsdom-global": "^3.0.2",
-    "popper.js": "1.15.0",
-    "sinon": "^7.5.0",
-    "truffle-assertions": "^0.9.2",
+    "jsdom": "15.2.1",
+    "jsdom-global": "3.0.2",
+    "popper.js": "1.16.0",
+    "truffle-assertions": "0.9.2",
     "twbs-pagination": "1.4.1",
-    "web3": "1.2.1",
-    "web3-fake-provider": "^0.1.0",
+    "web3": "1.2.4",
+    "web3-fake-provider": "0.1.0",
     "zlib": "1.0.5"
   },
   "devDependencies": {
-    "nyc": "^14.1.1"
+    "nyc": "14.1.1"
   }
 }
