--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@popperjs/core": "^2.0.0-rc.1",
     "blockies": "0.0.2",
-    "bootstrap": "4.3.1",
+    "bootstrap": "4.4.1",
     "browserify": "16.3.0",
     "btoa": "1.2.1",
     "chai": "4.2.0",
@@ -26,7 +27,7 @@
     "jquery-ui-dist": "1.12.1",
     "jsdom": "15.2.1",
     "jsdom-global": "3.0.2",
-    "popper.js": "1.16.0",
+    "popper.js": "^1.16.0",
     "truffle-assertions": "0.9.2",
     "twbs-pagination": "1.4.1",
     "web3": "1.2.4",
