--- a/package.json
+++ b/package.json
@@ -1,40 +1,71 @@
 {
   "name": "ethereum-event-scan",
-  "version": "1.0.0",
+  "private": true,
+  "version": "2.0.0",
   "description": "Lightweight ethereum event explorer for smart contracts",
   "main": "src/server.js",
-  "scripts": {
-    "test": "truffle test",
-    "coverage": "nyc --reporter=lcov truffle test"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/MarkusSprunck/ethereum-event-scan.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
   "dependencies": {
-    "@popperjs/core": "^2.0.0-rc.1",
+    "@angular/animations": "9.0.4",
+    "@angular/common": "9.0.4",
+    "@angular/compiler": "9.0.4",
+    "@angular/core": "9.0.4",
+    "@angular/forms": "9.0.4",
+    "@angular/material": "9.0.1",
+    "@angular/cdk": "9.0.1",
+    "@angular/platform-browser": "9.0.4",
+    "@angular/platform-browser-dynamic": "9.0.4",
+    "@angular/router": "9.0.4",
+    "@angular/localize": "9.0.4",
+    "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "@popperjs/core": "2.0.6",
+    "bignumber.js": "9.0.0",
     "blockies": "0.0.2",
     "bootstrap": "4.4.1",
-    "browserify": "16.3.0",
-    "btoa": "1.2.1",
-    "chai": "4.2.0",
-    "fs": "0.0.2",
-    "http": "0.0.0",
     "jquery": "3.4.1",
-    "jquery-ui-dist": "1.12.1",
-    "jsdom": "15.2.1",
-    "jsdom-global": "3.0.2",
-    "popper.js": "^1.16.0",
-    "truffle-assertions": "0.9.2",
-    "twbs-pagination": "1.4.1",
-    "web3": "1.2.4",
-    "web3-fake-provider": "0.1.0",
-    "zlib": "1.0.5"
+    "ng-trim-value-accessor": "3.0.2",
+    "ngx-device-detector": "1.3.20",
+    "node": "12.16.1",
+    "node-sass": "4.13.1",
+    "npm": "6.14.1",
+    "rxjs": "6.5.4",
+    "tslib": "1.11.1",
+    "web3": "1.2.6",
+    "webpack": "4.41.6",
+    "webpack-dev-server": "3.10.3",
+    "zlib": "1.0.5",
+    "zone.js": "0.10.2"
   },
   "devDependencies": {
-    "nyc": "14.1.1"
+    "@angular-devkit/build-angular": "0.900.4",
+    "@angular/cli": "9.0.4",
+    "@angular/compiler-cli": "9.0.4",
+    "@angular/language-service": "9.0.4",
+    "@types/node": "12.12.29",
+    "@types/jasmine": "3.5.7",
+    "@types/jasminewd2": "2.0.8",
+    "codelyzer": "5.2.1",
+    "jasmine-core": "3.5.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "4.3.0",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "2.1.1",
+    "karma-jasmine": "2.0.1",
+    "karma-jasmine-html-reporter": "1.5.2",
+    "protractor": "5.4.3",
+    "ts-node": "8.3.0",
+    "tslint": "5.18.0",
+    "typescript": "3.7.5"
   }
 }
