--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 55226",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -52,9 +52,10 @@
     "@angular/cli": "9.0.4",
     "@angular/compiler-cli": "9.0.4",
     "@angular/language-service": "9.0.4",
-    "@types/node": "12.12.29",
     "@types/jasmine": "3.5.7",
     "@types/jasminewd2": "2.0.8",
+    "@types/jquery": "^3.3.33",
+    "@types/node": "12.12.29",
     "codelyzer": "5.2.1",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
