--- a/package.json
+++ b/package.json
@@ -18,21 +18,20 @@
   },
   "dependencies": {
     "@angular/animations": "9.0.4",
+    "@angular/cdk": "9.0.1",
     "@angular/common": "9.0.4",
     "@angular/compiler": "9.0.4",
     "@angular/core": "9.0.4",
     "@angular/forms": "9.0.4",
+    "@angular/localize": "9.0.4",
     "@angular/material": "9.0.1",
-    "@angular/cdk": "9.0.1",
     "@angular/platform-browser": "9.0.4",
     "@angular/platform-browser-dynamic": "9.0.4",
     "@angular/router": "9.0.4",
-    "@angular/localize": "9.0.4",
-    "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "@popperjs/core": "2.0.6",
+    "angularfire2": "^5.4.2",
     "bignumber.js": "9.0.0",
     "blockies": "0.0.2",
-    "bootstrap": "4.4.1",
     "jquery": "3.4.1",
     "ng-trim-value-accessor": "3.0.2",
     "ngx-device-detector": "1.3.20",
