- update README.md - fix lint warnings - replace screenshots

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "start": "ng serve --port 55226",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "dependencies": {
     "@angular/animations": "9.0.4",
