--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.7'
 services:
 
   ethereum-event-scan:
+    image: sprunck/ethereum-event-scan:latest
     container_name: ethereum-event-scan
     build:
       context: .
