--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@angular/platform-browser-dynamic": "9.0.4",
     "@angular/router": "9.0.4",
     "@popperjs/core": "2.0.6",
-    "angularfire2": "^5.4.2",
+    "angularfire2": "5.4.2",
     "bignumber.js": "9.0.0",
     "blockies": "0.0.2",
     "jquery": "3.4.1",
@@ -36,7 +36,7 @@
     "ngx-device-detector": "1.3.20",
     "node": "12.16.1",
     "node-sass": "4.13.1",
-    "npm": "6.14.1",
+    "npm": "6.14.4",
     "rxjs": "6.5.4",
     "tslib": "1.11.1",
     "web3": "1.2.6",
@@ -57,12 +57,12 @@
     "codelyzer": "5.2.1",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.3.0",
+    "karma": "^5.0.2",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.5.2",
-    "protractor": "5.4.3",
+    "protractor": "6.0.0",
     "ts-node": "8.3.0",
     "tslint": "5.18.0",
     "typescript": "3.7.5"
