--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,11 @@
     ],
     "lib": [ "es5", "es6", "dom", "dom.iterable"
     ],
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noFallthroughCasesInSwitch": true,
-    "strictNullChecks": false
+    "strictNullChecks": true
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
