--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/common": "9.0.4",
     "@angular/compiler": "9.0.4",
     "@angular/core": "9.0.4",
+    "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "9.0.4",
     "@angular/localize": "9.0.4",
     "@angular/material": "9.0.1",
@@ -32,6 +33,7 @@
     "bignumber.js": "9.0.0",
     "blockies": "0.0.2",
     "jquery": "3.4.1",
+    "json-stringify-pretty-compact": "^2.0.0",
     "ng-trim-value-accessor": "3.0.2",
     "ngx-device-detector": "1.3.20",
     "node": "12.16.1",
@@ -43,8 +45,7 @@
     "webpack": "4.41.6",
     "webpack-dev-server": "3.10.3",
     "zlib": "1.0.5",
-    "zone.js": "0.10.2",
-    "json-stringify-pretty-compact": "^2.0.0"
+    "zone.js": "0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.900.4",
