--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/common": "9.0.4",
     "@angular/compiler": "9.0.4",
     "@angular/core": "9.0.4",
-    "@angular/flex-layout": "^9.0.0-beta.31",
+    "@angular/flex-layout": "9.0.0-beta.31",
     "@angular/forms": "9.0.4",
     "@angular/localize": "9.0.4",
     "@angular/material": "9.0.1",
@@ -32,18 +32,17 @@
     "angularfire2": "5.4.2",
     "bignumber.js": "9.0.0",
     "blockies": "0.0.2",
-    "jquery": "3.4.1",
     "json-stringify-pretty-compact": "^2.0.0",
     "ng-trim-value-accessor": "3.0.2",
     "ngx-device-detector": "1.3.20",
     "node": "12.16.1",
-    "node-sass": "4.13.1",
+    "node-sass": "4.14.1",
     "npm": "6.14.4",
     "rxjs": "6.5.4",
     "tslib": "1.11.1",
-    "web3": "1.2.6",
+    "web3": "1.2.7",
     "webpack": "4.41.6",
-    "webpack-dev-server": "3.10.3",
+    "webpack-dev-server": "3.11.0",
     "zlib": "1.0.5",
     "zone.js": "0.10.2"
   },
@@ -54,12 +53,12 @@
     "@angular/language-service": "9.0.4",
     "@types/jasmine": "3.5.7",
     "@types/jasminewd2": "2.0.8",
-    "@types/jquery": "^3.3.35",
+    "@types/jquery": "^3.3.38",
     "@types/node": "12.12.29",
     "codelyzer": "5.2.1",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "^5.0.2",
+    "karma": "^5.0.7",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "2.0.1",
