--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/flex-layout": "9.0.0-beta.31",
     "@angular/forms": "9.0.4",
     "@angular/localize": "9.0.4",
-    "@angular/material": "9.0.1",
+    "@angular/material": "^9.0.1",
     "@angular/platform-browser": "9.0.4",
     "@angular/platform-browser-dynamic": "9.0.4",
     "@angular/router": "9.0.4",
