--- a/package.json
+++ b/package.json
@@ -37,17 +37,17 @@
     "ngx-device-detector": "1.3.20",
     "node": "12.16.1",
     "node-sass": "4.14.1",
-    "npm": "6.14.4",
+    "npm": "^6.14.8",
     "rxjs": "6.5.4",
     "tslib": "1.11.1",
-    "web3": "1.2.7",
+    "web3": "1.2.11",
     "webpack": "4.41.6",
     "webpack-dev-server": "3.11.0",
     "zlib": "1.0.5",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.900.4",
+    "@angular-devkit/build-angular": "^0.1000.7",
     "@angular/cli": "9.0.4",
     "@angular/compiler-cli": "9.0.4",
     "@angular/language-service": "9.0.4",
@@ -63,7 +63,7 @@
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.5.2",
-    "protractor": "6.0.0",
+    "protractor": "^7.0.0",
     "ts-node": "8.3.0",
     "tslint": "5.18.0",
     "typescript": "3.7.5"
