--- a/package.json
+++ b/package.json
@@ -16,56 +16,56 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "@angular/animations": "9.0.4",
-    "@angular/cdk": "^9.0.1",
-    "@angular/common": "9.0.4",
-    "@angular/compiler": "9.0.4",
-    "@angular/core": "9.0.4",
-    "@angular/flex-layout": "9.0.0-beta.31",
-    "@angular/forms": "9.0.4",
-    "@angular/localize": "9.0.4",
-    "@angular/material": "^9.0.1",
-    "@angular/platform-browser": "9.0.4",
-    "@angular/platform-browser-dynamic": "9.0.4",
-    "@angular/router": "9.0.4",
-    "@popperjs/core": "2.0.6",
+    "@angular/animations": "^10.1.0",
+    "@angular/cdk": "^10.2.0",
+    "@angular/common": "^10.1.0",
+    "@angular/core": "^10.1.0",
+    "@angular/forms": "^10.1.0",
+    "@angular/material": "^10.2.0",
+    "@angular/platform-browser": "^10.1.0",
+    "@angular/platform-browser-dynamic": "^10.1.0",
+    "@angular/router": "^10.1.0",
+    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/localize": "^10.1.0",
+    "@popperjs/core": "2.4.4",
     "angularfire2": "5.4.2",
     "bignumber.js": "9.0.0",
-    "blockies": "0.0.2",
+    "blockies": "^0.0.2",
     "json-stringify-pretty-compact": "^2.0.0",
     "ng-trim-value-accessor": "3.0.2",
-    "ngx-device-detector": "1.3.20",
-    "node": "12.16.1",
+    "ngx-device-detector": "^1.5.2",
+    "node": "^14.8.0",
     "node-sass": "4.14.1",
     "npm": "^6.14.8",
     "rxjs": "6.5.4",
     "tslib": "1.11.1",
-    "web3": "1.2.11",
-    "webpack": "4.41.6",
-    "webpack-dev-server": "3.11.0",
-    "zlib": "1.0.5",
-    "zone.js": "0.10.2"
+    "web3": "^1.3.0-rc.0",
+    "webpack": "^4.44.1",
+    "webpack-dev-server": "^3.11.0",
+    "zlib": "^1.0.5",
+    "zone.js": "^0.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.7",
-    "@angular/cli": "9.0.4",
-    "@angular/compiler-cli": "9.0.4",
-    "@angular/language-service": "9.0.4",
+    "@angular-devkit/build-angular": "~0.1001.0",
+    "@angular/cli": "^10.1.0",
+    "@angular/compiler": "^10.1.0",
+    "@angular/compiler-cli": "^10.1.0",
+    "@angular/language-service": "^10.1.0",
     "@types/jasmine": "3.5.7",
-    "@types/jasminewd2": "2.0.8",
+    "@types/jasminewd2": "^2.0.8",
     "@types/jquery": "^3.3.38",
-    "@types/node": "12.12.29",
-    "codelyzer": "5.2.1",
-    "jasmine-core": "3.5.0",
-    "jasmine-spec-reporter": "4.2.1",
+    "@types/node": "^12.12.29",
+    "codelyzer": "^5.2.1",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^4.2.1",
     "karma": "^5.0.7",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-coverage-istanbul-reporter": "2.1.1",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.5.2",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.5.2",
     "protractor": "^7.0.0",
-    "ts-node": "8.3.0",
-    "tslint": "5.18.0",
-    "typescript": "3.7.5"
+    "ts-node": "~9.0.0",
+    "tslint": "~6.1.3",
+    "typescript": "~4.0.2"
   }
 }
