--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 55226",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint"
   },
@@ -28,15 +28,15 @@
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/localize": "^10.1.0",
     "@popperjs/core": "2.4.4",
-    "angularfire2": "5.4.2",
+    "@angular/fire": "6.0.2",
     "bignumber.js": "9.0.0",
     "blockies": "^0.0.2",
     "json-stringify-pretty-compact": "^2.0.0",
     "ng-trim-value-accessor": "3.0.2",
     "ngx-device-detector": "^1.5.2",
-    "node": "^14.8.0",
+    "node": "12.13.1",
     "node-sass": "4.14.1",
-    "npm": "^6.14.8",
+    "npm": "6.14.6",
     "rxjs": "6.5.4",
     "tslib": "1.11.1",
     "web3": "^1.3.0-rc.0",
