--- a/package.json
+++ b/package.json
@@ -15,20 +15,23 @@
     "test": "ng test",
     "lint": "ng lint"
   },
+  "optionalDependencies": {
+    "fsevents": "*"
+  },
   "dependencies": {
     "@angular/animations": "^10.1.0",
     "@angular/cdk": "^10.2.0",
     "@angular/common": "^10.1.0",
     "@angular/core": "^10.1.0",
+    "@angular/fire": "6.0.2",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "^10.1.0",
+    "@angular/localize": "^10.1.0",
     "@angular/material": "^10.2.0",
     "@angular/platform-browser": "^10.1.0",
     "@angular/platform-browser-dynamic": "^10.1.0",
     "@angular/router": "^10.1.0",
-    "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/localize": "^10.1.0",
     "@popperjs/core": "2.4.4",
-    "@angular/fire": "6.0.2",
     "bignumber.js": "9.0.0",
     "blockies": "^0.0.2",
     "json-stringify-pretty-compact": "^2.0.0",
@@ -36,7 +39,7 @@
     "ngx-device-detector": "^1.5.2",
     "node": "12.13.1",
     "node-sass": "4.14.1",
-    "npm": "6.14.6",
+    "npm": "^7.0.2",
     "rxjs": "6.5.4",
     "tslib": "1.11.1",
     "web3": "^1.3.0-rc.0",
@@ -45,7 +48,7 @@
     "zlib": "^1.0.5",
     "zone.js": "^0.11.1"
   },
-  "devDependencies": {
+   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.0",
     "@angular/cli": "^10.1.0",
     "@angular/compiler": "^10.1.0",
