--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
 
   ethereum-event-scan:
-    image: sprunck/ethereum-event-scan:latest
+    image: sprunck/ethereum-event-scan:3.0.0
     container_name: ethereum-event-scan
     build:
       context: .
