--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ethereum-event-scan",
   "private": true,
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Lightweight ethereum event explorer for smart contracts",
   "main": "src/server.js",
   "repository": {
@@ -11,7 +11,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 55226",
-    "build": "ng build --prod",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint"
   },
@@ -19,56 +19,48 @@
     "fsevents": "*"
   },
   "dependencies": {
-    "@angular/animations": "^10.1.0",
-    "@angular/cdk": "^10.2.0",
-    "@angular/common": "^10.1.0",
-    "@angular/core": "^10.1.0",
-    "@angular/fire": "6.0.2",
-    "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "^10.1.0",
-    "@angular/localize": "^10.1.0",
-    "@angular/material": "^10.2.0",
-    "@angular/platform-browser": "^10.1.0",
-    "@angular/platform-browser-dynamic": "^10.1.0",
-    "@angular/router": "^10.1.0",
-    "@popperjs/core": "2.4.4",
+    "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.0.3",
+    "@angular/common": "^15.0.0",
+    "@angular/compiler": "^15.0.0",
+    "@angular/core": "^15.0.0",
+    "@angular/forms": "^15.0.0",
+    "@angular/material": "^15.0.3",
+    "@angular/platform-browser": "^15.0.0",
+    "@angular/platform-browser-dynamic": "^15.0.0",
+    "@angular/router": "^15.0.0",
     "bignumber.js": "9.0.0",
     "blockies": "^0.0.2",
+    "buffer": "^6.0.3",
+    "css-select": "^5.1.0",
     "json-stringify-pretty-compact": "^2.0.0",
-    "ng-trim-value-accessor": "3.0.2",
-    "ngx-device-detector": "^1.5.2",
-    "node": "12.13.1",
-    "node-sass": "4.14.1",
-    "npm": "^7.0.2",
-    "rxjs": "6.5.4",
-    "tslib": "1.11.1",
+    "pako": "1.0.11",
+    "path-browserify": "^1.0.1",
+    "rxjs": "~7.5.0",
+    "stream-http": "^3.2.0",
+    "tslib": "^2.3.0",
     "web3": "^1.3.0-rc.0",
-    "webpack": "^4.44.1",
-    "webpack-dev-server": "^3.11.0",
-    "zlib": "^1.0.5",
-    "zone.js": "^0.11.1"
+    "zone.js": "~0.12.0"
   },
-   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.0",
-    "@angular/cli": "^10.1.0",
-    "@angular/compiler": "^10.1.0",
-    "@angular/compiler-cli": "^10.1.0",
-    "@angular/language-service": "^10.1.0",
-    "@types/jasmine": "3.5.7",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/jquery": "^3.3.38",
-    "@types/node": "^12.12.29",
-    "codelyzer": "^5.2.1",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^5.0.7",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
-    "protractor": "^7.0.0",
-    "ts-node": "~9.0.0",
-    "tslint": "~6.1.3",
-    "typescript": "~4.0.2"
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^15.0.4",
+    "@angular-eslint/builder": "15.1.0",
+    "@angular-eslint/eslint-plugin": "15.1.0",
+    "@angular-eslint/eslint-plugin-template": "15.1.0",
+    "@angular-eslint/schematics": "15.1.0",
+    "@angular-eslint/template-parser": "15.1.0",
+    "@angular/cli": "~15.0.4",
+    "@angular/compiler-cli": "^15.0.0",
+    "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "5.44.0",
+    "@typescript-eslint/parser": "5.44.0",
+    "eslint": "^8.28.0",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.8.2"
   }
 }
