Simplify docker build, cleanup code and update README.md

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,22 @@
+.angular/
+.idea/
+misc/
 node_modules/
-dist/
+src/
+.editorconfig
+.eslintrc.json
+.gitignore
+angular.json
+browserslist
+docker-compose.yml
+Dockerfile
+ethereum-event-scan.iml
+karma.conf.js
+LICENSE
+package.json
+package-lock.json
+README.md
+tsconfig.app.json
+tsconfig.json
+tsconfig.spec.json
+tslint.json
