--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 55226",
-    "build": "ng build",
+    "build": "ng build --configuration production --aot",
     "test": "ng test",
     "lint": "ng lint"
   },
@@ -32,6 +32,7 @@
     "bignumber.js": "9.0.0",
     "blockies": "^0.0.2",
     "buffer": "^6.0.3",
+    "cors": "^2.8.5",
     "css-select": "^5.1.0",
     "json-stringify-pretty-compact": "^2.0.0",
     "pako": "1.0.11",
