--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   },
   "dependencies": {
     "@angular/animations": "^16.1.5",
-    "@angular/cdk": "^15.0.3",
+    "@angular/cdk": "16.1.4",
     "@angular/common": "^16.1.5",
     "@angular/compiler": "^16.1.5",
     "@angular/core": "^16.1.5",
     "@angular/forms": "^16.1.5",
-    "@angular/material": "^15.0.3",
+    "@angular/material": "16.1.4",
     "@angular/platform-browser": "^16.1.5",
     "@angular/platform-browser-dynamic": "^16.1.5",
     "@angular/router": "^16.1.5",
@@ -40,16 +40,16 @@
     "rxjs": "~7.5.0",
     "stream-http": "^3.2.0",
     "tslib": "^2.3.0",
-    "web3": "^1.3.0-rc.0",
+    "web3": "1.9.0",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.4",
-    "@angular-eslint/builder": "15.1.0",
-    "@angular-eslint/eslint-plugin": "15.1.0",
-    "@angular-eslint/eslint-plugin-template": "15.1.0",
-    "@angular-eslint/schematics": "15.1.0",
-    "@angular-eslint/template-parser": "15.1.0",
+    "@angular-eslint/builder": "16.1.0",
+    "@angular-eslint/eslint-plugin": "16.1.0",
+    "@angular-eslint/eslint-plugin-template": "16.1.0",
+    "@angular-eslint/schematics": "16.1.0",
+    "@angular-eslint/template-parser": "16.1.0",
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.5",
     "@types/jasmine": "~4.3.0",
@@ -62,6 +62,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~5.1.6"
+    "typescript": "~4.9.3"
   }
 }
