--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ng": "ng",
     "start": "ng serve --port 55226",
     "build": "ng build --configuration production --aot",
-    "test": "ng test",
+    "test": "ng test --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint"
   },
   "optionalDependencies": {
@@ -29,13 +29,13 @@
     "@angular/platform-browser": "^16.1.5",
     "@angular/platform-browser-dynamic": "^16.1.5",
     "@angular/router": "^16.1.5",
-    "bignumber.js": "9.0.0",
+    "bignumber.js": "^9.0.0",
     "blockies": "^0.0.2",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "css-select": "^5.1.0",
     "json-stringify-pretty-compact": "^2.0.0",
-    "pako": "1.0.11",
+    "pako": "^1.0.11",
     "path-browserify": "^1.0.1",
     "rxjs": "~7.5.0",
     "stream-http": "^3.2.0",
@@ -45,16 +45,16 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.4",
-    "@angular-eslint/builder": "16.1.0",
-    "@angular-eslint/eslint-plugin": "16.1.0",
-    "@angular-eslint/eslint-plugin-template": "16.1.0",
-    "@angular-eslint/schematics": "16.1.0",
-    "@angular-eslint/template-parser": "16.1.0",
+    "@angular-eslint/builder": "^16.1.0",
+    "@angular-eslint/eslint-plugin": "^16.1.0",
+    "@angular-eslint/eslint-plugin-template": "^16.1.0",
+    "@angular-eslint/schematics": "^16.1.0",
+    "@angular-eslint/template-parser": "^16.1.0",
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.5",
     "@types/jasmine": "~4.3.0",
-    "@typescript-eslint/eslint-plugin": "5.44.0",
-    "@typescript-eslint/parser": "5.44.0",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "eslint": "^8.28.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
