Add standard security headers

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,6 +25,7 @@ http {
     keepalive_timeout  65;
 
     include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/secure_headers.conf;
 
     server {
         server_name   localhost;
@@ -32,7 +33,8 @@ http {
 
         error_page    500 502 503 504  /50x.html;
 
-        location      / {
+        location / {
+            root "/usr/share/nginx/html";
             index index.html;
         }
 
