--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "^16.1.5",
     "@angular/platform-browser-dynamic": "^16.1.5",
     "@angular/router": "^16.1.5",
+    "assert": "^2.1.0",
     "bignumber.js": "^9.0.0",
     "blockies": "^0.0.2",
     "buffer": "^6.0.3",
@@ -37,7 +38,9 @@
     "json-stringify-pretty-compact": "^2.0.0",
     "pako": "^1.0.11",
     "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "rxjs": "~7.5.0",
+    "stream": "^0.0.2",
     "stream-http": "^3.2.0",
     "tslib": "^2.3.0",
     "web3": "1.9.0",
