--- a/angular.json
+++ b/angular.json
@@ -13,12 +13,17 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "lodash"
+            ],
             "outputPath": "dist/ethereum-event-scan",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
-              "zone.js"
+              "zone.js",
+              "src/polyfills.ts"
             ],
+            "preserveSymlinks": true,
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
