--- a/package.json
+++ b/package.json
@@ -19,49 +19,45 @@
     "fsevents": "*"
   },
   "dependencies": {
-    "@angular/animations": "^16.1.5",
-    "@angular/cdk": "16.1.4",
-    "@angular/common": "^16.1.5",
-    "@angular/compiler": "^16.1.5",
-    "@angular/core": "^16.1.5",
-    "@angular/forms": "^16.1.5",
-    "@angular/material": "16.1.4",
-    "@angular/platform-browser": "^16.1.5",
-    "@angular/platform-browser-dynamic": "^16.1.5",
-    "@angular/router": "^16.1.5",
-    "bignumber.js": "^9.0.0",
+    "@angular/animations": "^21.0.5",
+    "@angular/cdk": "21.0.3",
+    "@angular/common": "^21.0.5",
+    "@angular/compiler": "^21.0.5",
+    "@angular/core": "^21.0.5",
+    "@angular/forms": "^21.0.5",
+    "@angular/material": "21.0.3",
+    "@angular/platform-browser": "^21.0.5",
+    "@angular/platform-browser-dynamic": "^21.0.5",
+    "@angular/router": "^21.0.5",
+    "bignumber.js": "^9.3.1",
     "blockies": "^0.0.2",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
-    "css-select": "^5.1.0",
-    "json-stringify-pretty-compact": "^2.0.0",
-    "pako": "^1.0.11",
+    "css-select": "^6.0.0",
+    "json-stringify-pretty-compact": "^4.0.0",
+    "pako": "^2.1.0",
     "path-browserify": "^1.0.1",
-    "rxjs": "~7.5.0",
+    "rxjs": "~7.8.2",
     "stream-http": "^3.2.0",
-    "tslib": "^2.3.0",
-    "web3": "1.9.0",
-    "zone.js": "~0.13.1"
+    "tslib": "^2.8.1",
+    "web3": "^4.16.0",
+    "zone.js": "~0.16.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.4",
-    "@angular-eslint/builder": "^16.1.0",
-    "@angular-eslint/eslint-plugin": "^16.1.0",
-    "@angular-eslint/eslint-plugin-template": "^16.1.0",
-    "@angular-eslint/schematics": "^16.1.0",
-    "@angular-eslint/template-parser": "^16.1.0",
-    "@angular/cli": "~16.1.4",
-    "@angular/compiler-cli": "^16.1.5",
-    "@types/jasmine": "~4.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
-    "eslint": "^8.28.0",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
+    "@angular-devkit/build-angular": "^21.0.3",
+    "@angular/cli": "~21.0.3",
+    "@angular/compiler-cli": "^21.0.5",
+    "@types/jasmine": "~5.1.13",
+    "@types/pako": "^2.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
+    "@typescript-eslint/parser": "^8.49.0",
+    "eslint": "^9.39.2",
+    "jasmine-core": "~5.13.0",
+    "karma": "~6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.3"
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.9.3"
   }
 }
