ESlint the code

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,24 @@
 {
   "root": true,
   "ignorePatterns": [
-    "projects/**/*"
+    "projects/**/*",
+    "/dist",
+    "/node_modules/"
   ],
   "overrides": [
     {
       "files": [
         "*.ts"
+      ],
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "project": [
+          "tsconfig.json"
+        ],
+        "sourceType": "module"
+      },
+      "plugins": [
+        "@typescript-eslint"
       ],
       "extends": [
         "eslint:recommended",
