chore: migrate tests to Jest; remove Karma test target and config

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "ng": "ng",
     "start": "ng serve --port 55226",
     "build": "ng build --configuration production --aot",
-    "test": "ng test --watch=false --browsers=ChromeHeadless",
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "npx eslint \"src/**/*.ts\" --ext .ts"
   },
   "optionalDependencies": {
@@ -41,22 +43,18 @@
     "@angular-devkit/build-angular": "^21.0.3",
     "@angular/cli": "~21.0.3",
     "@angular/compiler-cli": "^21.0.5",
-    "@types/jasmine": "~5.1.13",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@types/jest": "^30.0.0",
     "@types/pako": "^2.0.4",
     "@typescript-eslint/eslint-plugin": "^8.49.0",
     "@typescript-eslint/parser": "^8.49.0",
+    "babel-jest": "^30.2.0",
     "eslint": "^9.39.2",
-    "jasmine-core": "~5.13.0",
-    "karma": "~6.4.4",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.1",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "karma-spec-reporter": "^0.0.36",
-    "karma-mocha-reporter": "^2.2.5",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "jest-preset-angular": "^16.0.0",
+    "ts-jest": "^29.4.6",
     "typescript": "~5.9.3"
-  },
-  "overrides": {
-    "rimraf": "^4.4.1"
   }
 }
