--- a/package.json
+++ b/package.json
@@ -56,5 +56,10 @@
     "jest-preset-angular": "^16.0.0",
     "ts-jest": "^29.4.6",
     "typescript": "~5.9.3"
+  },
+  "overrides": {
+    "test-exclude": {
+      "glob": "^13.0.0"
+    }
   }
 }
