Update copyright years to 2025, enhance ESLint configuration, cleanup code and adjust Docker image version

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,16 @@
 {
   "root": true,
-  "ignorePatterns": [
-    "projects/**/*",
-    "/dist",
-    "/node_modules/"
-  ],
+  "ignorePatterns": ["projects/**/*", "dist", "node_modules"],
   "overrides": [
     {
-      "files": [
-        "*.ts"
-      ],
+      "files": ["*.ts"],
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
-        "project": [
-          "tsconfig.json"
-        ],
-        "sourceType": "module"
+        "project": ["tsconfig.json"],
+        "sourceType": "module",
+        "ecmaVersion": 2020
       },
-      "plugins": [
-        "@typescript-eslint"
-      ],
+      "plugins": ["@typescript-eslint"],
       "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
@@ -27,38 +18,41 @@
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
-        "@typescript-eslint/ban-ts-comment": "off",
-        "@typescript-eslint/no-explicit-any": "off",
-        "no-prototype-builtins": "off",
+        "@typescript-eslint/ban-ts-comment": ["warn", { "ts-ignore": "allow-with-description" }],
+        "@typescript-eslint/no-explicit-any": "warn",
+        "@typescript-eslint/no-unused-vars": [
+          "warn",
+          {
+            "argsIgnorePattern": "^_",
+            "varsIgnorePattern": "^_",
+            "caughtErrorsIgnorePattern": "^_",
+            "ignoreRestSiblings": true
+          }
+        ],
         "@typescript-eslint/no-var-requires": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
+        "no-prototype-builtins": "off",
+        "no-console": ["warn", { "allow": ["warn", "error", "info"] }],
+        "no-debugger": "error",
+        "eqeqeq": ["error", "always"],
+        "curly": "error",
+        "prefer-const": ["error", { "destructuring": "all" }],
+        "no-var": "error",
         "@angular-eslint/directive-selector": [
           "error",
-          {
-            "type": "attribute",
-            "prefix": "app",
-            "style": "camelCase"
-          }
+          { "type": "attribute", "prefix": "app", "style": "camelCase" }
         ],
         "@angular-eslint/component-selector": [
           "error",
-          {
-            "type": "element",
-            "prefix": "app",
-            "style": "kebab-case"
-          }
+          { "type": "element", "prefix": "app", "style": "kebab-case" }
         ]
       }
     },
     {
-      "files": [
-        "*.html"
-      ],
-      "extends": [
-        "plugin:@angular-eslint/template/recommended"
-      ],
+      "files": ["*.html"],
+      "extends": ["plugin:@angular-eslint/template/recommended"],
       "rules": {
-
+        "@angular-eslint/template/no-negated-async": "error"
       }
     }
   ]
