--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   ethereum-event-scan:
-    image: sprunck/ethereum-event-scan:latest
+    image: sprunck/ethereum-event-scan:3.0.1
     container_name: ethereum-event-scan
     ports:
       - '55226:80'
