--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "build": "ng build --configuration production --aot",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
     "lint": "npx eslint \"src/**/*.ts\" --ext .ts"
   },
   "optionalDependencies": {
@@ -27,7 +26,7 @@
     "@angular/compiler": "^21.0.5",
     "@angular/core": "^21.0.5",
     "@angular/forms": "^21.0.5",
-    "@angular/material": "21.0.3",
+    "@angular/material": "^21.0.3",
     "@angular/platform-browser": "^21.0.5",
     "@angular/platform-browser-dynamic": "^21.0.5",
     "@angular/router": "^21.0.5",
@@ -41,11 +40,14 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^21.0.3",
+    "@angular-eslint/eslint-plugin": "^21.1.0",
+    "@angular-eslint/eslint-plugin-template": "^21.1.0",
     "@angular/cli": "~21.0.3",
     "@angular/compiler-cli": "^21.0.5",
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.3",
     "@types/pako": "^2.0.4",
     "@typescript-eslint/eslint-plugin": "^8.49.0",
     "@typescript-eslint/parser": "^8.49.0",
