--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ng": "ng",
     "start": "ng serve --port 55226",
     "build": "ng build --configuration production --aot",
-    "test": "jest",
+    "test": "jest --verbose",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage",
     "lint": "npx eslint \"src/**/*.ts\" --ext .ts"
