Refactor Angular configuration and Jest setup to improve compatibility and remove unused polyfills

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,12 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
