--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "pako": "^2.1.0",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
-    "web3": "^4.16.0",
-    "zone.js": "~0.16.0"
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^21.0.3",
@@ -59,6 +58,7 @@
     "jest-environment-jsdom": "^30.2.0",
     "jest-preset-angular": "^16.0.0",
     "ts-jest": "^29.4.6",
-    "typescript": "~5.9.3"
+    "typescript": "~5.9.3",
+    "zone.js": "~0.16.0"
   }
 }
